Fix the whitespace above code examples once and for all
Closes #302

--- a/source/assets/css/components/_callouts.scss
+++ b/source/assets/css/components/_callouts.scss
@@ -13,8 +13,6 @@
       bottom: .25rem;
     };
 
-    .code-example { margin-top: -3rem; }
-
     .signature {
       margin: {
         right: -1rem;
